# tauri-plugin-egui

./: Cargo.toml
examples/vanilla/src-tauri/src/: main.rs
src/: lib.rs  plugin.rs  renderer.rs  utils.rs
