[package]
name = "tauri-plugin-egui"
version = "0.1.0"
authors = [ "Siddharth <siddharth99c@gmail.com>" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-egui"

[dependencies]
tauri = "2.7.0"
tauri-runtime = "2.7.1"
tauri-runtime-wry = "2.7.2"
anyhow = "1.0.98"
wgpu = "27.0.1"
egui = "0.33"
egui-wgpu = "0.33"
rdev = { git = "https://github.com/fufesou/rdev" }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }

[workspace]
members = ["examples/vanilla/src-tauri"]
